fix text align center

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -848,7 +848,6 @@ input[type="checkbox"]:checked::before {
     border-radius: 30px;
     background: #ffffff;
     padding: 10px 0px;
-    padding-left: 0px;
     width: 80%;
     border: none;
     color: #252525;
